# platform_external_dbus

./: .cvsignore  .gitignore  AUTHORS  Android.bp  COPYING  ChangeLog  Doxyfile  Doxyfile.in  HACKING  INSTALL  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  README.dbus4win  README.win  ThirdPartyProject.prop  acconfig.h  acinclude.m4  autogen.sh  config.h  config.h.in  configure  configure.in  dbus-1.0.pc.in  dbus-1.pc.in  dbus-glib-1.0.pc.in  dbus-glib-1.pc.in  dbus-qt4-1.pc.in  dbus-sharp.pc.in  dbus-win.patch  project.config  update-dbus-docs.sh
bus/: .cvsignore  .gitignore  Android.bp  Android.mk  Makefile.am  Makefile.in  activation-exit-codes.h  activation-helper-bin.c  activation-helper.c  activation.c  activation.h  bus.c  bus.h  config-loader-expat.c  config-loader-libxml.c  config-parser-common.c  config-parser-common.h  config-parser-trivial.c  config-parser-trivial.h  config-parser.c  config-parser.h  connection.c  connection.h  dbus-daemon-1.1.in  dbus-daemon.1  dbus-daemon.1.in  dbus.service.in  dbus.socket.in  desktop-file.c  desktop-file.h  dir-watch-default.c  dir-watch-dnotify.c  dir-watch-inotify.c  dir-watch-kqueue.c  dir-watch.c  dir-watch.h  dispatch.c  dispatch.h  driver.c  driver.h  (+26 more)
cmake/bus/: CMakeLists.txt
cmake/dbus/: CMakeLists.txt  dbus-1.def.cmake  dbus-arch-deps.h.cmake  dbus-internal.def.cmake
cmake/doc/: CMakeLists.txt
cmake/test/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
dbus/: .cvsignore  Android.bp  Android.mk  Makefile.am  Makefile.in  dbus-1-clientsymbols.def.in  dbus-1-symbols.def.in  dbus-1-testsymbols.def.in  dbus-1-utilsymbols.def.in  dbus-1-verbosesymbols.def.in  dbus-1.def  dbus-1.def.cmake  dbus-1.def.pre  dbus-address.c  dbus-address.h  dbus-arch-deps.h  dbus-arch-deps.h.in  dbus-auth-script.c  dbus-auth-script.h  dbus-auth-util.c  dbus-auth.c  dbus-auth.h  dbus-break-loader.c  dbus-bus.c  dbus-bus.h  dbus-config.c  dbus-config.h  dbus-connection-internal.h  dbus-connection.c  dbus-connection.h  dbus-convenience.def.pre  dbus-credentials-util.c  dbus-credentials.c  dbus-credentials.h  dbus-dataslot.c  dbus-dataslot.h  dbus-dict.c  dbus-dict.h  dbus-errors.c  dbus-errors.h  (+145 more)
doc/: .cvsignore  Makefile.am  Makefile.in  TODO  busconfig.dtd  config-file.txt  dbus-faq.xml  dbus-sasl-profile.txt  dbus-specification.sgml  dbus-specification.xml  dbus-test-plan.sgml  dbus-test-plan.xml  dbus-tutorial.xml  file-boilerplate.c  introspect.dtd  introspect.xsl  negotiation.txt
gcj/: .cvsignore  Hello.java  Makefile.am  TestMessage.java
gcj/org/: Makefile.am
glib/: .cvsignore  Makefile.am  dbus-binding-tool-glib.c  dbus-binding-tool-glib.h  dbus-compiler-main.c  dbus-gidl.c  dbus-gidl.h  dbus-glib-tool.c  dbus-glib-tool.h  dbus-glib.c  dbus-glib.h  dbus-gloader-expat.c  dbus-gmain.c  dbus-gmarshal.c  dbus-gobject.c  dbus-gobject.h  dbus-gparser.c  dbus-gparser.h  dbus-gproxy.c  dbus-gproxy.h  dbus-gsignature.c  dbus-gtest-main.c  dbus-gtest.c  dbus-gtest.h  dbus-gthread.c  dbus-gtool-test.h  dbus-gtype-specialized.c  dbus-gtype-specialized.h  dbus-gutils.c  dbus-gutils.h  dbus-gvalue-utils.c  dbus-gvalue-utils.h  dbus-gvalue.c  dbus-gvalue.h  make-dbus-glib-error-switch.sh  test-dbus-glib.c  test-profile.c  test-thread-client.c  test-thread-server.c
glib/examples/: .cvsignore  Makefile.am  example-client.c  example-service.c  example-signal-emitter.c  example-signal-recipient.c
mono/: .cvsignore  Arguments.cs  AssemblyInfo.cs.in  Bus.cs  BusDriver.cs  Connection.cs  Custom.cs  DBus.cs  Error.cs  Handler.cs  InterfaceProxy.cs  Introspector.cs  Makefile.am  Message.cs  ProxyBuilder.cs  README  Service.cs  Signal.cs  TODO  Test.cs  dbus-sharp.dll.config.in  dbus-sharp.snk
mono/DBusType/: Array.cs  Boolean.cs  Byte.cs  Custom.cs  Dict.cs  Double.cs  Int32.cs  Int64.cs  Nil.cs  ObjectPath.cs  String.cs  UInt32.cs  UInt64.cs
mono/doc/: .cvsignore  Makefile.am  dbus-sharp-docs.source
mono/example/: .cvsignore  BusListener.cs  EchoClient.cs  EchoServer.cs  Echoer.cs  Makefile.am
qt/: .cvsignore  Doxyfile  Makefile.am  README  connection.cpp  connection.h  dbus-qt.h  dbus-qthread.cc  dbus-qthread.cpp  dbuscpp2xml.cpp  dbusidl2cpp.cpp  integrator.cpp  integrator.h  message.cpp  message.h  qdbus.h  qdbusabstractadaptor.cpp  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.cpp  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusbus.h  qdbusconnection.cpp  qdbusconnection.h  qdbusconnection_p.h  qdbuserror.cpp  qdbuserror.h  qdbusintegrator.cpp  qdbusinterface.cpp  qdbusinterface.h  qdbusinterface_p.h  qdbusinternalfilters.cpp  qdbusintrospection.cpp  qdbusintrospection.h  qdbusintrospection_p.h  qdbusmacros.h  qdbusmarshall.cpp  qdbusmarshall.h  qdbusmarshall_p.h  (+29 more)
qt/dbus/: Makefile.am  qdbus.h  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusbus.h  qdbusconnection.h  qdbusconnection_p.h  qdbuserror.h  qdbusinterface.h  qdbusinterface_p.h  qdbusintrospection_p.h  qdbusmacros.h  qdbusmarshall_p.h  qdbusmessage.h  qdbusmessage_p.h  qdbusmetaobject_p.h  qdbusreply.h  qdbusserver.h  (+4 more)
qt3/: Makefile.am  connection.cpp  dbus-qt.h  dbus-qthread.cpp  message.h  server.cpp  server.h
test/: .cvsignore  Makefile.am  Makefile.in  break-loader.c  bus-test-loop.c  bus-test-loop.h  bus-test.c  debug-thread.c  debug-thread.h  decode-gcov.c  echo-client.c  echo-server.c  fix-standard-tests.sh  shell-test.c  spawn-test.c  test-names.c  test-segfault.c  test-service.c  test-shell-service.c  test-sleep-forever.c  test-utils.c  test-utils.h  unbase64.c  unused-code-gc.py  watch.c  watch.h
tools/: .cvsignore  Android.mk  Makefile.am  Makefile.in  dbus-cleanup-sockets.1  dbus-cleanup-sockets.c  dbus-launch-win.c  dbus-launch-x11.c  dbus-launch.1  dbus-launch.c  dbus-launch.h  dbus-monitor.1  dbus-monitor.c  dbus-names-model.c  dbus-names-model.h  dbus-print-message.c  dbus-print-message.h  dbus-send.1  dbus-send.c  dbus-tree-view.c  dbus-tree-view.h  dbus-uuidgen.1  dbus-uuidgen.c  dbus-viewer.c  print-introspect.c  run-with-tmp-session-bus.sh
(+217 files in other folders)
